# Mejlmannen

./: Cargo.toml  README.md
src/: client.rs  common.rs  extractor.rs  main.rs  request.rs  response.rs
tests/data/: tests.mejl
tests/httpbin/ip/: example.json  get_ip.json  get_ip_body.json
tests/httpbin/ip/_data/: post-anything.json
