[package]
name = "mejlman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
anyhow = "1.0.62"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.3", features = ["derive"] }
